--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo">
-                <img src="/images/navbar.png" alt="Best Fare Travels Logo">
+                <img src="/navbar.png" alt="Best Fare Travels Logo">
             </div>
             <nav class="navigation">
                 <a href="#home" class="nav-link">Home</a>
@@ -130,32 +130,32 @@
             
             <div class="destinations-grid">
                 <div class="destination-card">
-                    <img src="Images/BALI.jpg" alt="Destination 1">
+                    <img src="BALI.jpg" alt="Destination 1">
                     <h3>Bali</h3>
                     <p>Indonesia</p>
                 </div>
                 <div class="destination-card">
-                    <img src="Images/TOKYO.jpg" alt="Destination 2">
+                    <img src="TOKYO.jpg" alt="Destination 2">
                     <h3>Tokyo</h3>
                     <p>Japan</p>
                 </div>
                 <div class="destination-card">
-                    <img src="Images/PARIS.jpg" alt="Destination 3">
+                    <img src="PARIS.jpg" alt="Destination 3">
                     <h3>Paris</h3>
                     <p>France</p>
                 </div>
                 <div class="destination-card">
-                    <img src="Images/DUBAI.jpg" alt="Destination 4">
+                    <img src="DUBAI.jpg" alt="Destination 4">
                     <h3>Dubai</h3>
                     <p>UAE</p>
                 </div>
                 <div class="destination-card">
-                    <img src="Images/SINGAPORE.JPG" alt="Destination 5">
+                    <img src="SINGAPORE.JPG" alt="Destination 5">
                     <h3>Singapore</h3>
                     <p>Singapore</p>
                 </div>
                 <div class="destination-card">
-                    <img src="Images/PHUKET.jpg" alt="Destination 6">
+                    <img src="PHUKET.jpg" alt="Destination 6">
                     <h3>Phuket</h3>
                     <p>Thailand</p>
                 </div>
@@ -176,7 +176,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <img src="/images/main.png" alt="Best Fare Travels" class="footer-logo">
+                <img src="/main.png" alt="Best Fare Travels" class="footer-logo">
                 <p>Your trusted partner for affordable travel solutions worldwide.</p>
             </div>
 
@@ -221,3 +221,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
