Reformat index.html with corrected HTML entities

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo">
-                <img src="/navbar.png" alt="Best Fare Travels Logo">
+                <img src="navbar.png" alt="Best Fare Travels Logo">
             </div>
             <nav class="navigation">
                 <a href="#home" class="nav-link">Home</a>
@@ -221,4 +221,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
